# StateRail

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
apps/analytics/: Cargo.toml
apps/analytics/src/: main.rs
apps/api/: package.json
apps/api/src/: db.ts  executor.ts  index.ts  pubsub.ts
apps/engine/: Cargo.toml
apps/engine/src/: lib.rs  main.rs
apps/frontend/: index.html  package.json
apps/frontend/src/: app.tsx  main.tsx
docs/: ARCHITECTURE.md
infra/: docker-compose.yaml
