[workspace]
members = ["apps/engine", "apps/analytics"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["StateRail"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
